feat(home): add title

--- a/best-of-the-year/src/main/resources/templates/home.html
+++ b/best-of-the-year/src/main/resources/templates/home.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Best of the year</title>
 </head>
 <body>
 	<h1>Best of the year by [[${name}]]</h1>
