feat(home): add style.css in the page

--- a/best-of-the-year/src/main/resources/templates/home.html
+++ b/best-of-the-year/src/main/resources/templates/home.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Best of the year</title>
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<h1>Best of the year by [[${name}]]</h1>
